--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
     "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
     "handlebars": "^4.7.7",
     "mongoose": "^6.0.9",
+    "nodemailer": "^6.7.2",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
